@@ -42,14 +42,16 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <configuration>
+                    <mainClass>com.ejemplo.Publicador</mainClass>
+                    <arguments>
+                    <argument>--add-opens</argument>
+                    <argument>java.base/jdk.internal.misc=ALL-UNNAMED</argument>
+                    </arguments>
+                </configuration>
             </plugin>
+
+
         </plugins>
     </build>
 </project>
